remove java rx